# ARColoringBook

./: .gitignore  ANDROID_IOS_BUILDS_ADDED.md  ARTIFACT_COPY_FIX.md  AR_PACKAGES_FIX.md  COMMIT_CHECKLIST.md  COMPLETE_FIX_SUMMARY.md  CONTRIBUTING.md  DISK_SPACE_FIX.md  EXPORT_SCRIPT_LOGGING_FIX.md  EXPORT_SCRIPT_NOT_EXECUTING.md  FINAL_FIXES.md  FINAL_FIX_DIRECT_UNITY.md  FINAL_WORKFLOW_STATUS.md  FUNDING.yml  INVALID_PACKAGES_FIX.md  LIBRARY_CACHE_AND_EXPORT_FIX.md  LICENSE  MANUAL_PACKAGE_EXPORT_SOLUTION.md  META_FILES_FIX.md  QUICK_FIX_SUMMARY.md  README.md  READY_TO_COMMIT.md  UNITY_BUILD_FIX.md  UNITY_VERSION_FIX.md  VALIDATION_CHECKLIST.md  WORKFLOW_ERROR_CHECK.md  WORKFLOW_FIXES_COMPLETE.md  WORKFLOW_FIXES_SUMMARY.md  WORKFLOW_FIX_SUMMARY.md  YAML_INDENTATION_FIX.md
.github/: COMMIT_MESSAGE.md
.github/workflows/: README.md  build-and-package.yml
Assets/: DefaultNetworkPrefabs.asset  UniversalRenderPipelineAsset.asset  UniversalRenderPipelineGlobalSettings.asset  Unwarpmat.mat
Assets/ColouringBook/: ARColoringMultiply.shader  ARFoundationBridge.cs  CHANGELOG.md  HomographyUnwarp.shader  IntegrityWatcher.cs  Internals.cs  LICENSE.md  LicenseData.cs  README.md  ReferenceImageLibrary.asset  Settings.cs  package.json
Assets/ColouringBook/.publisher/: IMAGE_REQUIREMENTS.md  README.md  SUBMISSION_GUIDE.md  metadata.json
Assets/ColouringBook/.vshistory/ARFoundationBridge.cs/: 2025-12-07_18_03_04_065.cs  2025-12-08_19_39_11_804.cs  2025-12-08_19_39_13_785.cs  2025-12-08_20_09_26_619.cs  2025-12-08_20_09_43_026.cs  2025-12-08_21_08_52_481.cs  2025-12-08_21_09_19_456.cs  2025-12-08_21_13_34_820.cs  2025-12-08_21_16_13_693.cs  2025-12-08_21_18_52_783.cs  2025-12-08_21_19_02_040.cs  2025-12-08_21_19_11_190.cs  2025-12-08_21_19_43_314.cs  2025-12-08_21_20_05_778.cs  2025-12-08_21_21_08_036.cs  2025-12-08_21_21_32_803.cs  2025-12-08_21_25_29_650.cs  2025-12-08_21_25_39_142.cs  2025-12-08_21_25_42_341.cs  2025-12-08_21_25_45_500.cs  2025-12-08_21_27_22_433.cs  2025-12-08_21_27_35_463.cs  2025-12-08_21_32_26_277.cs  2025-12-08_21_34_57_300.cs  2025-12-08_21_35_04_897.cs  2025-12-08_21_40_58_150.cs  2025-12-08_21_44_19_799.cs  2025-12-08_21_44_23_519.cs  2025-12-08_21_44_44_722.cs  2025-12-08_21_44_54_783.cs  2025-12-08_21_54_52_427.cs  2025-12-08_21_57_03_558.cs  2025-12-08_21_59_53_772.cs  2025-12-08_22_00_13_069.cs  2025-12-08_22_00_18_255.cs  2025-12-08_22_00_27_633.cs  2025-12-08_22_00_30_383.cs  2025-12-08_22_00_39_645.cs  2025-12-08_22_00_44_184.cs  (+16 more)
Assets/ColouringBook/Editor/: ARContentSpawnerEditor.cs  ARContentSpawnerRefreshHelper.cs  ARDefineManager.cs  ARPaintableObjectEditor.cs  ARScannerManagerEditor.cs  BuildEnforcer.cs  FileModificationWarning.cs  IntegrityWatcher.cs  LicenseManagerEditor.cs  URPAssetVersionChecker.cs
Assets/ColouringBook/Materials/: CombUnwarpmat.mat  Mat.mat  Unwarpmat.mat
Assets/ColouringBook/Runtime/: ARContentSpawner.cs  ARPaintableObject.cs  ARScannerManager.cs  LicenseManager.cs
Assets/ColouringBook/Scenes/: ARFoundationSample.unity  ARFoundationSampleSettings.lighting
Assets/ColouringBook/Scripts/: ARFoundationBridge.cs  IARBridge.cs
Assets/ColouringBook/Settings/: Settings.asset
Assets/ColouringBook/Shader/: unwarp.shader
Assets/ColouringBook/Shaders/: ARColoringComposite.shader  CombinedUnwarpShader.shader  unwarp.shader
Assets/Materials/: BoundingBoxBottomEdgeGradientMaterial.mat  BoundingBoxFaceMaterial.mat  Checkered.mat  GrayFloor.mat  PlacedCubeMaterial.mat  PlaneMaterial.mat  ReflectiveMaterial.mat  Transparent.mat  TriColor.mat  XMaterial.mat  YMaterial.mat  ZMaterial 1.mat  ZMaterial.mat  plane.mat  sloth_all_1001_AlbedoTransparency.mat
Assets/Materials/Occlusion/: OccludedLitShaderGraphMaterial.mat  OccludedUnlitShaderGraphMaterial.mat
Assets/Plugins/macOS/: libFelina.dylib
Assets/Prefabs/: AR Anchor Debug Visualizer.prefab  AR Bounding Box Debug Visualizer.prefab  AR Plane Debug Visualizer.prefab  AR Point Cloud Debug Visualizer.prefab  ARF XR Origin Set Up.prefab  ImageInfoPrefab.prefab  m-cm-01.prefab  m-cm-02.prefab  planet.FBX
Assets/Prefabs/Meta/: Meta Persistent Anchor Entry.prefab  Meta Persistent Anchors Canvas.prefab  Meta Shared Anchor Entry.prefab  Meta Shared Anchors Canvas.prefab
Assets/Prefabs/UI/: Canvas Template.prefab  In Progress Notification.prefab
Assets/Robot/: Robo.controller  Robo.fbx  Robo.prefab  Robo_Mat.mat
Assets/Scenes/BoundingBoxDetection/: BoundingBoxes.unity
Assets/Scenes/Menu/: AndroidXRMenu.unity
Assets/Scenes/Meta/: MetaOcclusion.unity
Assets/Scripts/Runtime/: ARBoundingBoxDebugVisualizer.cs  ARKitAdvancedCameraConfigurationController.cs  DebugInfoDisplayController.cs  FadeAfterDuration.cs  HMDCanvasController.cs  ScaleToSizeOfSafeArea.cs
Assets/Settings/: DefaultVolumeProfile.asset  Medium_PipelineAsset.asset  Medium_PipelineAsset_ForwardRenderer.asset  ReferenceImageLibrary.asset  Render Pipeline Asset.asset  Render Pipeline Asset_Renderer.asset  UniversalRenderPipelineGlobalSettings.asset
Assets/Shaders/: BoundingBoxShader.shader
Assets/URP/: URP Render Pipeline Asset.asset  URP Render Pipeline Asset_Renderer.asset  UniversalRenderPipelineGlobalSettings.asset
Assets/URPDefaultResources/: High.asset  Low.asset  Ultra.asset  Very High.asset  Very Low.asset
Assets/XR/: XRGeneralSettingsPerBuildTarget.asset
Assets/XR/Settings/: OpenXR Package Settings.asset  OpenXRPackageSettings.asset
FelinaLibrary/: Android.mk  BUILD_FIX.md  CMakeLists.txt  README.md  build_android.bat  build_ios.sh  build_macos.sh  test-build.sh
FelinaLibrary/.vshistory/CMakeLists.txt/: 2025-12-08_17_27_28_638.txt  2025-12-08_17_35_19_367.txt  2025-12-08_17_36_37_991.txt  2025-12-08_17_37_11_145.txt
FelinaLibrary/.vshistory/Felina.cpp/: 2025-12-08_17_20_59_143.cpp  2025-12-08_17_55_47_617.cpp  2025-12-08_17_56_25_477.cpp
FelinaLibrary/cmake/: README.md  ios.toolchain.cmake
FelinaLibrary/src/: Felina.cpp
ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  ProjectSettings.asset  QualitySettings.asset  TagManager.asset
cmake/: ios.toolchain.cmake
(+207 files in other folders)
